# pmvs_lab4

./: .travis.yml  Makefile  Makefile.in  Makefile.save  README.md  config.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0
full-package-name-VERSION/: config.h.in
include/: task1.h
lab4/: .travis.yml  config.h
lab4/autom4te.cache/: requests  traces.1
lab4/full-package-name-VERSION/include/: task1.h
lab4/full-package-name-VERSION/src/: Makefile.in
lab4/src/: Makefile
src/: Makefile  Makefile.am  Makefile.in  task1.c
src/.deps/: task1.Po
